# Api_gateway/docs/swagger.json
@@ -600,6 +600,22 @@
                 "responses": {}
             }
         },
+        "/user/role": {
+            "put": {
+                "description": "Updates the role of the user based on the user ID in the request context.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Change the role of a user",
+                "responses": {}
+            }
+        },
         "/user/signup": {
             "post": {
                 "description": "Create a new user account",
